tests/trybuild/cannot_call_union_on_traced_union.rs
use eros::{Union};



fn main() {
    let error: eros::ErrorUnion = eros::traced!("Error");
    let _error = error.union();
}
